<resources>
    <string name="app_name">HealthQuest</string>

    <string name="facebook_app_id">560958610908425</string>
    <string name="fb_login_protocol_scheme">fb560958610908425</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--activity-->
    <string name="activity__alert_logout_title">Одјава</string>
    <string name="activity__alert_logout_body">Дали сте сигурни дека сакате да се одјавите?</string>
    <string name="activity__alert_logout_btn">Одјава</string>


    <!--menu-->
    <string name="menu_home">Почетна</string>
    <string name="menu_profile">Профил</string>
    <string name="menu_friends">Пријатели</string>
    <string name="menu_notifications">Известувања</string>
    <string name="menu_settings">Подесувања</string>
    <string name="menu_logout">Одјава</string>

    <!--main fragment-->
    <string name="main_app_title">Health Quest</string>
    <string name="main_exit_title">Излез</string>
    <string name="main_exit_desc">Are you sure you want to exit?</string>
    <string name="main_exit_cancel">Откажи</string>
    <string name="main_exit_ok">Да</string>

    <!--main layout-->
    <string name="main_btn_play">Играј</string>
    <string name="main_btn_mini_game">Mini game</string>
    <string name="main_btn_about">About</string>
    <string name="main_btn_rankings">Ранг листа</string>
    <string name="main_btn_tutorial">Tutorial</string>
    <string name="main_btn_exit">Излез</string>

    <!--login fragment-->
    <string name="login_invalid">Неточна адреса или пасворд!</string>
    <string name="login_error">Something went wrong.\nTry again in a few minutes.</string>

    <!--login layout-->
    <string name="login_hint_email">Email</string>
    <string name="login_hint_pass">Password</string>
    <string name="login_btn_sign_in">Најави се</string>
    <string name="login_btn_facebook">Facebook</string>

    <!--game layout-->
    <string name="game_btn_save_answer">Зачувај</string>
    <string name="game_btn_go_back">Назад</string>

    <!--game fragment-->
    <string name="game_correct">Точен одговор</string>
    <string name="game_incorrect">Неточен одговор</string>
    <string name="game_countdown">Играта ќе започне за:</string>
    <string name="game_error">Something went wrong.\nTry again in a few minutes.</string>
    <string name="game_win">Освоивте: %1$d поени</string>
    <string name="level_up">Браво!\nГо достигнавте ниво:\n%1$d</string>

    <!--profile layout-->
    <string name="profile_email">Email: </string>
    <string name="profile_level">Ниво: </string>
    <string name="profile_points">Поени: </string>

</resources>
