<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_group_black"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_keyboard_backspace_black"
            android:title="@string/menu_logout" />
    </group>

</menu>